--- a/style.css
+++ b/style.css
@@ -1,17 +1,20 @@
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Roboto', sans-serif!important;
   background-color: #C6DEA6;
 }
 
 #header {
   text-align: center;
   text-decoration: underline;
+  margin-top: 30px;
 }
 
 img {
   display: block;
   width: 50%;
   height: 400px;
+  margin-top: 30px;
+  margin-bottom: 30px;
   margin-left: auto;
   margin-right: auto;
   border: black solid 3px;
@@ -37,4 +40,13 @@ p {
   width: 65%;
   margin: auto;
   padding-bottom: 20px;
+}
+
+@media screen and (max-width: 576px) {
+  body {
+    width: auto;
+  }
+  img {
+    height: auto;
+  }
 }
